# GotMilked

./: .gitignore  .markdownlint.json  CMakeLists.txt  CMakePresets.json  README.md  SCENE_MANAGEMENT_SUMMARY.md  SceneManagementGuide.hpp  imgui.ini  roadmap.mp
apps/GotMilked/: CMakeLists.txt  README.md  config.json
apps/GotMilked/assets/config/: celestial.json  weather_profiles.json
apps/GotMilked/assets/prefabs/: Cow.json
apps/GotMilked/assets/shaders/: fog_froxel.comp.glsl  fog_resolve.frag.glsl  fog_resolve.vert.glsl  simple.frag.glsl  simple.vert.glsl  simple_skinned.vert.glsl  sky.frag.glsl  sky_gradient.frag.glsl  sky_gradient.vert.glsl  text2d.vert.glsl  weather_particles.frag.glsl  weather_particles.vert.glsl
apps/GotMilked/saves/: imgui.ini  quick_save.json  quick_save_20251111_175814.json  quick_save_20251111_180543.json  quick_save_20251111_204549.json  quick_save_20251112_101314.json  quick_save_20251112_140540.json  quick_save_20251112_145329.json  quick_save_20251112_150811.json  quick_save_20251112_151125.json  quick_save_20251112_180619.json  quick_save_20251112_180630.json  quick_save_20251112_181727.json  quick_save_20251112_195220.json  quick_save_20251112_195231.json  quick_save_20251113_053902.json  quick_save_20251113_063300.json  quick_save_20251113_065806.json  quick_save_20251113_101439.json  quick_save_20251113_102924.json  quick_save_20251113_174551.json  quick_save_20251113_205438.json  quick_save_20251113_205450.json  quick_save_20251113_205458.json  quick_save_20251114_185027.json  quick_save_20251114_193730.json  quick_save_20251115_083015.json  quick_save_20251115_142443.json  quick_save_20251115_151222.json  quick_save_20251115_192143.json  save.json  save1_1.json  save2.json  starter.scene.json
apps/GotMilked/src/: CowAnimationController.cpp  CowAnimationController.hpp  CowComponent.cpp  CowComponent.hpp  DebugHudController.cpp  DebugHudController.hpp  DebugMenu.cpp  DebugMenu.hpp  DebugMenu_Menus.cpp  DebugMenu_RecentFiles.cpp  DebugMenu_Windows.cpp  DebugToolingController.cpp  DebugToolingController.hpp  EditableTerrainComponent.cpp  EditableTerrainComponent.hpp  EventRouter.cpp  EventRouter.hpp  Game.cpp  Game.hpp  GameBootstrapper.cpp  GameBootstrapper.hpp  GameConstants.hpp  GameEvents.hpp  GameLoopController.cpp  GameLoopController.hpp  GameRenderer.cpp  GameRenderer.hpp  GameResources.cpp  GameResources.hpp  GameSceneHelpers.cpp  GameSceneHelpers.hpp  GameShutdownController.cpp  GameShutdownController.hpp  NarrativeScriptingLog.cpp  NarrativeScriptingLog.hpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp  SceneResourceController.cpp  SceneResourceController.hpp  SceneSerializerExtensions.cpp  (+17 more)
apps/GotMilked/src/debug_menu/: CelestialPanel.cpp  ContentValidationPanel.cpp  FogPanel.cpp  SceneOutlinerPanel.cpp  WeatherPanel.cpp  WeatherScenarioPanel.cpp
apps/GotMilked/src/gameplay/: CameraRigComponent.cpp  CameraRigComponent.hpp  CameraRigSystem.cpp  CameraRigSystem.hpp  DialogueTriggerComponent.cpp  DialogueTriggerComponent.hpp  DialogueTriggerSystem.cpp  DialogueTriggerSystem.hpp  FlyCameraController.cpp  FlyCameraController.hpp  QuestTriggerComponent.cpp  QuestTriggerSystem.cpp
apps/GotMilkedSandbox/: CMakeLists.txt  README.md  config.json
apps/GotMilkedSandbox/assets/shaders/: simple.frag.glsl  simple.vert.glsl  text2d.frag.glsl
apps/GotMilkedSandbox/saves/: quick_save.json
apps/GotMilkedSandbox/src/: CowRendererComponent.cpp  CowRendererComponent.hpp  Game.cpp  Game.hpp  Mesh.cpp  Mesh.hpp  MeshSpinnerComponent.cpp  MeshSpinnerComponent.hpp  ResourceHotReloader.cpp  ResourceHotReloader.hpp  SandboxResources.cpp  SandboxResources.hpp  SandboxSceneHelpers.cpp  SandboxSceneHelpers.hpp  SceneSerializerExtensions.cpp  SceneSerializerExtensions.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  main.cpp  stb_image_impl.cpp
apps/GotMilkedSandbox/src/gameplay/: SandboxGameplay.cpp  SandboxGameplay.hpp
apps/GotMilkedSandbox/src/save/: SaveGame.hpp  SaveManager.cpp  (+1 more)
src/Debug/: CMakeLists.txt  GridRenderer.cpp  TerrainEditingSystem.cpp
src/animation/: AnimationClip.cpp  AnimationPose.cpp  AnimationPoseEvaluator.cpp  CMakeLists.txt  PoseMath.cpp  Skeleton.cpp  SkinnedMeshAsset.cpp
src/assets/: AssetCatalog.cpp  AssetDatabase.cpp  CMakeLists.txt
src/content/: CMakeLists.txt  ContentDatabase.cpp  ContentSchemaRegistry.cpp  SimpleYaml.cpp
src/core/: CMakeLists.txt  Event.cpp  GameApp.cpp  Input.cpp  InputBindings.cpp  Time.cpp
src/core/input/: InputSystem.cpp
src/physics/: CMakeLists.txt  JoltImpl.cpp  PhysicsWorld.cpp  RigidBodyComponent.cpp
src/prototypes/: CMakeLists.txt  Primitives.cpp
src/rendering/: CMakeLists.txt  Camera.cpp  CascadeShadowMap.cpp  LightManager.cpp  Material.cpp  Mesh.cpp  RenderStateCache.cpp  Shader.cpp  Texture.cpp
src/runtime/: CMakeLists.txt
src/save/: CMakeLists.txt  SaveDiff.cpp  SaveManager.cpp  SaveSnapshotHelpers.cpp  SaveVersion.cpp
src/scene/: AnimationSystem.cpp  AnimatorComponent.cpp  CMakeLists.txt  Component.cpp  ComponentDescriptor.cpp  ComponentFactory.cpp  GameObject.cpp  GameObjectScheduler.cpp  LightComponent.cpp  MaterialComponent.cpp  PrefabLibrary.cpp  RenderBatcher.cpp  Scene.cpp  SceneLifecycle.cpp  SceneManager.cpp  SceneSerializer.cpp  Scene_GameObject.cpp  SkinnedMeshComponent.cpp  StaticMeshComponent.cpp  TimeOfDayController.cpp  TransformComponent.cpp  VolumetricFogComponent.cpp  WeatherEmitterComponent.cpp
src/tooling/: CMakeLists.txt  DebugConsole.cpp  Overlay.cpp
src/utils/: CMakeLists.txt  Config.cpp  CoordinateDisplay.cpp  FileDialog.cpp  HotReloader.cpp  ImGuiManager.cpp  ObjLoader.cpp  Profiler.cpp  ResourceManager.cpp  ResourceManifest.cpp  ResourceRegistry.cpp  ThreadPool.cpp
tests/: AnimationPipelineTests.cpp  CMakeLists.txt  CascadeShadowMapTests.cpp  GameResourcesTests.cpp  GameplayToolingTests.cpp  HosekCoefficientsTests.cpp  LoggerTests.cpp  PhysicsWorldTests.cpp  ResourceManagerTests.cpp  SceneDrawSmokeTest.cpp  SceneSerializerTests.cpp  TestAssetHelpers.cpp  TestAssetHelpers.hpp  TestMain.cpp  TimeOfDayControllerTests.cpp
(+281 files in other folders)
